--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changelog for Catmandu-LIDO
 
 {{$NEXT}}
+   - adding required test dependencies
 
 0.01  2016-04-22 14:31:35 CEST
    - initial version
