--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Changelog for Catmandu-LIDO
 {{$NEXT}}
 
 0.04  2016-11-28 15:39:52 CEST
-   - missing required dependency version
+   - adding LIDO fixes
 
 0.03  2016-04-23 16:38:52 CEST
    - missing required dependency version
