--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Changelog for Catmandu-LIDO
 
 {{$NEXT}}
 
+  - added id_type to lido_actor
+  - convert unit and type to paths in lido_objectmeasurements
+  - make lido_objectmeasurements repeatable
+
 0.04  2016-11-28 23:02:53 CET
 
    - adding LIDO fixes
