--- a/Changes
+++ b/Changes
@@ -2,7 +2,10 @@ Changelog for Catmandu-LIDO
 
 {{$NEXT}}
 
+  - Changed: added lido:pref to ID struct.
+
 0.08  2017-01-16 13:44:13 UTC
+
   - updated documentation
 
 0.07  2016-12-07 17:05:07 CET
