--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changelog for Catmandu-LIDO
 
 {{$NEXT}}
 
+  - Fixed #7: Stale code causing an 'Use of uninitialized value in split' error.
+
 0.09  2017-11-21 16:18:33 CET
 
   - Changed: added lido:pref to ID struct.
